<resources>
    <string name="app_name">Ingoma Tourism</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="amenities">Amenities</string>
    <string name="check_now">Check Now</string>
    <string name="review_title_mr">Mr.</string>
    <string name="review_title_mrs">Mrs.</string>
    <string name="review_title_ms">Ms.</string>
    <string name="regular">regular</string>
    <string name="added_to">Added to</string>
    <string name="saved_un">Saved</string>
    <string name="get_points">Get Points</string>
    <string name="popular">Popular</string>
    <string name="premium">Premium</string>
    <string name="select">Select</string>
    <string name="special">Special</string>
    <string name="starts_from">Starts from</string>
    <string name="bdt">BDT</string>
    <string name="for_1_night_per_room">pour 1 nuit</string>
    <string name="hotel">Hôtel</string>
    <string name="city_area_property_name">Ville ou nom du logement</string>
    <string name="check_in">Date d\'arrivée</string>
    <string name="check_out">Date de départ</string>
    <string name="guests">Voyageurs</string>
    <string name="rooms">Chambre</string>
    <string name="optional_filters_txt">Optional Filters</string>
    <string name="modify_search">Modify Search</string>
    <string name="search">Search</string>
    <string name="how_to_book_hotel_ques">How to Book Hotel?</string>
    <string name="watch_video">Watch Video</string>
    <string name="previous_searches">Previous Searches</string>
    <string name="hot_deals">Hot Deals</string>
    <string name="done">Confirmer</string>
    <string name="select_stay_date_s">Sélectionner les dates de séjour</string>
    <string name="select_traveler">Select Traveler</string>
    <string name="more_than_4_guests">More than 4 guests?</string>
    <string name="add_another_room">Add Another Room</string>
    <string name="remove">Remove</string>
    <string name="adult">Adultes</string>
    <string name="children">Enfants</string>
    <string name="hotel_child_age_range">0–10 ans</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="offer">Offer</string>
    <string name="inbox">Inbox</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="most_popular_locations">Endroits les plus populaires</string>
    <string name="htl_sort_by">Trier par</string>
    <string name="htl_confirm">Confirmer</string>
    <string name="htl_filters">Filters</string>
    <string name="clear">Réinitialiser </string>
    <string name="htl_no_properties">No Properties found. Remove filters to view more properties.</string>
    <string name="show_properties">Show Properties</string>
    <string name="flights">Flights</string>
    <string name="one_way">Hôtel</string>
    <string name="round_way">Maison de Passage </string>
    <string name="medium">medium</string>
    <string name="bold">bold</string>
    <string name="thin">thin</string>
    <string name="light">light</string>
    <string name="light_underline">light_underline</string>
    <string name="condensed_bold">condensed_bold</string>
    <string name="condensed_light">condensed_light</string>
    <string name="condensed_regular">condensed_regular</string>
    <string name="font_medium_normal">font_medium_normal</string>
    <string name="no_ride_found">No Car Found</string>
    <string name="we_have_no_rides_available_on_this_route">We have no car available on this route</string>
    <string name="find_bus">Find Bus</string>
    <string name="my_bookings">My Bookings</string>
    <string name="previous">Previous</string>
    <string name="upcoming">Upcoming</string>
    <string name="cancelled">Cancelled</string>
    <string name="you_have_not_made_any_bookings_yet">You have not made any\10 bookings yet.</string>
    <string name="download_voucher">Download Voucher</string>
    <string name="hotel_details">Hotel Details</string>
    <string name="ref">Ref :</string>
    <string name="policies">Policies</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="child_policy">Child Policy</string>
    <string name="house_rules">House Rules</string>
    <string name="payment_info">Payment Information</string>
    <string name="fare_summary">Fare Summary</string>
    <string name="total_amount">Total Amount</string>
    <string name="convenience_fee">Convenience Charge</string>
    <string name="addons_txt">Add-ons</string>
    <string name="discount_txt">Discount</string>
    <string name="you_paid">You Paid\10</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_via">Paid Via</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_type">Card Type</string>
    <string name="emi">EMI</string>
    <string name="emi_bank_title">Bank</string>
    <string name="emi_installment_title">EMI Installments</string>
    <string name="card_number">Card Number</string>
    <string name="gate_way">Gateway</string>
    <string name="account_number">Account Number</string>
    <string name="your_documents">Your Documents</string>
    <string name="download_booking">Download Booking</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="download_ticket">Download Ticket</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="booking_details">Booking Details</string>
    <string name="check_out_">Check Out: </string>
    <string name="check_your_email">Check Your Email</string>
    <string name="checkin_">Check In : </string>
    <string name="first_name_flight">Given Name / First Name</string>
    <string name="first_name_hint">Given Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hint">Surname</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="account_details">Account Details</string>
    <string name="welcome_back_text">Welcome Back!</string>
    <string name="continue_your_journey_with_go_zayaan">Continue your journey with GoZayaan</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in">Log in</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account_text">Create Account!</string>
    <string name="are_your_existing_user">Are you an existing FindMyAdventure user?</string>
    <string name="see_how_to_setup_account">See how to setup your account</string>
    <string name="your_journey_with_go_zayaan_starts_here">Your journey with GoZayaan starts here</string>
    <string name="_170_xxx_xxxx">170 XXX XXXX</string>
    <string name="password_condition1">Password must be at least 8 characters</string>
    <string name="password_condition2">Password must have 1 upper case (AB) &amp; 1 lower case letter (ab)</string>
    <string name="password_condition3">Password must have 1 number (123)</string>
    <string name="create_account">Create Account</string>
    <string name="password_reset_email_new">Please enter your email address and we\'ll send you a link to reset your password.</string>
    <string name="current_password">Current Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="notifications">Notifications</string>
    <string name="no_notifications">There are no notifications for you</string>
    <string name="messages">Messages</string>
    <string name="dont_have_notification">Looks like you don’t have any notifications or messages</string>
    <string name="explore_more_activies">Explore New Activities</string>
    <string name="notification_app_name">Goibibo</string>
    <string name="bed_type_might_change">Bed Type might change depending on availability</string>
    <string name="non_smoking_room">Non-Smoking Room</string>
    <string name="hurry_up_room_left">Hurry Up! Only %1$d rooms left</string>
    <string name="view_details">View Details</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="thank_you">Success !</string>
    <string name="error_message">Error !</string>
    <string name="feedback_submitted">Saran kamu telah kami terima.</string>
</resources>