<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt">
    <item
        android:icon="@drawable/dynamic_home_icon"
        android:id="@+id/navigation_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/dynamic_home_my_booking_icon"
        android:id="@+id/navigation_dashboard"
        android:title="@string/bookings"
        app:showAsAction="ifRoom"/>

    <item
        android:icon="@drawable/dynamic_inbox_icon"
        android:id="@+id/navigation_notifications"
        android:title="@string/inbox"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/dynamic_profile_icon"
        android:id="@+id/navigation_account"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>
</menu>
