<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:orientation="vertical"
    android:background="@color/colorBG"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="@dimen/padding_16">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adult"
                style="@style/H2TextAppearance"/>
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_gravity="center"
                android:id="@+id/ib_ad_min"
                android:background="@color/colorBG"
                android:padding="@dimen/padding_16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_minus_circle"
                android:layout_weight="1"/>
            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tv_ad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="1"
                android:layout_weight="1"
                style="@style/H2TextAppearance"/>
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ib_ad_plus"
                android:background="@color/colorBG"
                android:padding="@dimen/padding_16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_plus_circle"
                android:layout_weight="1"/>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <View android:background="@color/colorDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:paddingStart="@dimen/padding_16"
            android:paddingEnd="@dimen/padding_16">
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/children"
                    style="@style/H2TextAppearance"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel_child_age_range"
                    android:fontFamily="@font/avenir_regular"
                    style="@style/H3Avenir"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/ib_ch_min"
                    android:background="@color/colorBG"
                    android:padding="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_minus_circle"
                    android:layout_weight="1"/>
                <TextView
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/tv_ch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_weight="1"
                    style="@style/H2TextAppearance"/>
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_gravity="center_vertical"
                    android:id="@+id/ib_ch_plus"
                    android:background="@color/colorBG"
                    android:padding="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_plus_circle"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <View android:background="@color/colorDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>
