<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:background="@color/colorBG"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDone"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/done"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/padding_16"
        android:layout_marginEnd="@dimen/padding_16"
        style="@style/PrimaryButtonStyle"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnDone"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/customToolbar"
            android:paddingTop="@dimen/toolbar_padding_8"
            android:paddingBottom="@dimen/toolbar_padding_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
            android:elevation="4dp">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_gravity="center_vertical"
                android:id="@+id/ivDateBack"
                android:background="@color/colorTransparent"
                android:padding="@dimen/padding_16"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left"
                android:scaleType="fitStart"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_stay_date_s"
                android:maxLines="1"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                style="@style/ToolbarTitleStyle"/>
        </RelativeLayout>
        <View
            android:background="@color/colorDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <RelativeLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customToolbar">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2.2">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:id="@+id/layoutStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_gravity="center"
                        android:paddingTop="@dimen/padding_16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_in"
                        style="@style/H3Avenir"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_gravity="center"
                        android:id="@+id/tvStartDate"
                        android:paddingBottom="@dimen/padding_16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        style="@style/H2BoldTextAppearance"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2">
                    <View
                        android:layout_gravity="center"
                        android:background="@color/whiteBlue"
                        android:layout_width="1dp"
                        android:layout_height="60dp"
                        android:rotation="35"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:id="@+id/layoutReturnDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_gravity="center"
                        android:paddingTop="@dimen/padding_16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_out"
                        style="@style/H3Avenir"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:ellipsize="end"
                        android:layout_gravity="center"
                        android:id="@+id/tvEndDate"
                        android:paddingBottom="@dimen/padding_16"
                        android:text="njjj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:maxLines="1"
                        style="@style/H2BoldTextAppearance"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="10sp"
                android:textColor="@color/colorTextUnderlined"
                android:id="@+id/tvDayCount"
                android:background="@color/colorBG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:minLines="2"
                android:text="2 nuits"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                app:fontFamily="@font/gilroy_bold"/>
        </RelativeLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2.2"
            android:layout_below="@+id/header_layout">
            <View
                android:id="@+id/startFocus"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"/>
            <View
                android:background="@color/whiteBlue"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="0.2"/>
            <View
                android:id="@+id/endFocus"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.kizitonwose.calendar.view.CalendarView
                android:layout_gravity="center"
                android:id="@+id/calendarView"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cv_orientation="vertical"
                app:cv_dayViewResource="@layout/calendar_day_layout"
                app:cv_monthHeaderResource="@layout/calendar_month_header_layout"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>
